packages/compiler/tests/compile/yaml/errors/incomplete_array.t/run.t
Tableau non fermé

  $ publicodes compile input.publicodes
  error[E001]: Le tableau n'est pas fermé
      = il manque  `]` pour le fermer, ou `,` pour ajouter un élément
  [2]
